auto-test/tests/chapter_18/invalid_parse/extra_credit/union_member_initializer.c
union a {
    
    int member = 1;
};